--- a/config.json5
+++ b/config.json5
@@ -1,10 +1,10 @@
 {
   "extends": "@parcel/config-default",
-  "resolvers": ["./parcel-plugins/varhub-source-dir-resolver.js", "..."],
+  "resolvers": ["@flinbein/parcel-resolver-varhub-source-dir", "..."],
   "transformers": {
-    "varhub-source:*.{json,js}": ["./parcel-plugins/varhub-source-text-transformer.js", "..."],
+    "varhub-source:*.{json,js}": ["@flinbein/parcel-transformer-varhub-source-text", "..."],
     "varhub-source:*.{ts,js}": ["@parcel/transformer-typescript-tsc", "..."],
-    "varhub-source:*": ["./parcel-plugins/varhub-source-text-transformer.js", "..."],
+    "varhub-source:*": ["@flinbein/parcel-transformer-varhub-source-text", "..."],
     "varhub-modules:*": ["..."]
   }
 }
