--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@flinbein/parcel-config-varhub",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "./config.json5",
   "types": "./types.d.ts",
   "author": "dpohvar@gmail.com",
   "dependencies": {
-    "mime-types": "^2.1.35",
-    "parcel": "^2.10.3"
+    "@flinbein/parcel-resolver-varhub-source-dir": "git+https://github.com/flinbein/parcel-resolver-varhub-source-dir.git#1.0.0",
+    "@flinbein/parcel-transformer-varhub-source-text": "git+https://github.com/flinbein/parcel-transformer-varhub-source-text.git#1.0.0"
   },
   "devDependencies": {
     "varhub-ws-client": "git+https://github.com/flinbein/varhub-ws-client.git#1.0.13"
